*Empty MediaWiki Message*

--- a/Template:Dalalka.mw
+++ b/Template:Dalalka.mw
@@ -113,7 +113,7 @@
                 --><br/>[[Demographics of {{{common_name}}}|(and {{{largest_settlement_type|Magaalada Uguwayn}}})]]
                    </td>
                    <!--------Add capital:-------->
-                   <td style="vertical-align:middle;">{{{capital}}}<!--
+                   <td style="vertical-align:middle;">{{{caasimada}}}<!--
                     ---------add capital's latitude and longitude (if provided):--------
                     -->{{#if:{{{latd|}}} |<!--then:--><br/><small><!--
                     -->{{coor dm |{{{latd}}}|{{{latm}}}|{{{latNS}}}|{{{longd}}}<!--
