*Empty MediaWiki Message*

--- a/Template:Dalalka.mw
+++ b/Template:Dalalka.mw
@@ -186,7 +186,7 @@
 <!-------------------------------------Dowlada-------------------------------------->
 {{#if:{{{dowlada|}}}
 |<!--then:-->
-   <tr> <th colspan="2">'''Dowlada'''<th>
+   <tr> <th colspan="2">'''Dowlada'''</th>
         <td>{{{dowlada|}}}</td>
    </tr>
 |<!--else: if leader/s provided but no government_type, use generic subheading "Government":--><!--
