روبوت  إضافة: bcl, ce, dsb, hak, lad, map-bms, wuu إزالة: gn, zh-classical تعديل: als, ja, nds, sco

--- a/Category:Juquraafi.mw
+++ b/Category:Juquraafi.mw
@@ -1,7 +1,7 @@
 [[Category:Saynis]]
 
 [[af:Kategorie:Geografie]]
-[[als:Kategorie:Geografie]]
+[[als:Kategorie:Geografi]]
 [[an:Categoría:Cheografía]]
 [[ar:تصنيف:جغرافيا]]
 [[ast:Categoría:Xeografía]]
@@ -9,12 +9,14 @@
 [[az:Kateqoriya:Coğrafiya]]
 [[ba:Категория:География]]
 [[bat-smg:Kategorija:Geuograpėjė]]
+[[bcl:Kategorya:Heograpiya]]
 [[be:Катэгорыя:Геаграфія]]
 [[be-x-old:Катэгорыя:Геаграфія]]
 [[bg:Категория:География]]
 [[bs:Kategorija:Geografija]]
 [[ca:Categoria:Geografia]]
 [[cdo:Category:Dê-lī]]
+[[ce:Тоба:Лаьттан Iилма]]
 [[cr:Category:Geografia]]
 [[cs:Kategorie:Geografie]]
 [[csb:Kategòrëjô:Geògrafijô]]
@@ -23,6 +25,7 @@
 [[cy:Categori:Daearyddiaeth]]
 [[da:Kategori:Geografi]]
 [[de:Kategorie:Geographie]]
+[[dsb:Kategorija:Geografija]]
 [[el:Κατηγορία:Γεωγραφία]]
 [[en:Category:Geography]]
 [[eo:Kategorio:Geografio]]
@@ -33,13 +36,13 @@
 [[fiu-vro:Katõgooria:Maatiidüs]]
 [[fo:Bólkur:Landafrøði]]
 [[fr:Catégorie:Géographie]]
-[[frp:Category:G·eografia]]
+[[frp:Catègorie:G·eografia]]
 [[fur:Categorie:Gjeografie]]
 [[fy:Kategory:Geografy]]
 [[ga:Catagóir:Tíreolaíocht]]
-[[gl:Category:Xeografía]]
-[[gn:Categoría:Geografia]]
+[[gl:Categoría:Xeografía]]
 [[gu:Category:ભૂગોળ]]
+[[hak:Category:Thi-lî]]
 [[he:קטגוריה:גאוגרפיה]]
 [[hi:श्रेणी:भूगोल]]
 [[hr:Kategorija:Zemljopis]]
@@ -50,10 +53,10 @@
 [[id:Kategori:Geografi]]
 [[ie:Category:Geografie]]
 [[ilo:Category:Heografia]]
-[[io:Category:Geografio]]
+[[io:Kategorio:Geografio]]
 [[is:Flokkur:Landafræði]]
 [[it:Categoria:Geografia]]
-[[ja:Category:地理学]]
+[[ja:Category:地理]]
 [[jbo:Category:tutske]]
 [[jv:Kategori:Geografi]]
 [[ka:კატეგორია:გეოგრაფია]]
@@ -64,19 +67,21 @@
 [[kw:Category:Dorydhyeth]]
 [[ky:Category:География]]
 [[la:Categoria:Geographia]]
-[[lb:Category:Geographie]]
+[[lad:Category:Jeografiya]]
+[[lb:Kategorie:Geographie]]
 [[li:Categorie:Geografie]]
-[[lmo:Category:Geugrafía]]
-[[ln:Category:Mambí ma mabelé]]
+[[lmo:Categoria:Geugrafía]]
+[[ln:Catégorie:Mambí ma mabelé]]
 [[lt:Kategorija:Geografija]]
 [[lv:Kategorija:Ģeogrāfija]]
+[[map-bms:Category:Geografi]]
 [[mi:Category:Mātai matawhenua]]
 [[mk:Категорија:Географија]]
 [[mn:Category:Газар зүй]]
 [[ms:Kategori:Geografi]]
 [[mt:Category:Ġeografija]]
 [[nap:Categoria:Giugrafia]]
-[[nds:Kategorie:Geographie]]
+[[nds:Kategorie:Geografie]]
 [[nds-nl:Kattegerie:Geografie]]
 [[nl:Categorie:Geografie]]
 [[nn:Kategori:Geografi]]
@@ -90,8 +95,8 @@
 [[rmy:Shopni:Phuvipen]]
 [[ro:Categorie:Geografie]]
 [[ru:Категория:География]]
-[[scn:Category:Giografìa]]
-[[sco:Category:Geographie]]
+[[scn:Catigurìa:Giografìa]]
+[[sco:Category:Geography]]
 [[sh:Category:Geografija]]
 [[simple:Category:Geography]]
 [[sk:Kategória:Geografia]]
@@ -116,8 +121,8 @@
 [[wa:Categoreye:Djeyografeye]]
 [[war:Category:Heyograpiya]]
 [[wo:Catégorie:Séwógaraafi]]
+[[wuu:Category:地理]]
 [[yi:קאַטעגאָריע:געאגראפיע]]
 [[zh:Category:地理]]
-[[zh-classical:Category:方誌]]
 [[zh-min-nan:Category:Tē-lí-ha̍k]]
 [[zh-yue:Category:地理]]
