روبوت  إضافة: [[gn:Ñemohenda:Tetãnguéra]], [[ksh:Saachjrupp:Äädtkondt]] تعديل: [[bat-smg:Kateguorėjė:Geuograpėjė]]

--- a/Category:Juquraafi.mw
+++ b/Category:Juquraafi.mw
@@ -8,7 +8,7 @@
 [[ay:Categoría:Geografiya]]
 [[az:Kateqoriya:Coğrafiya]]
 [[ba:Категория:География]]
-[[bat-smg:Kategorija:Geuograpėjė]]
+[[bat-smg:Kateguorėjė:Geuograpėjė]]
 [[bcl:Kategorya:Heograpiya]]
 [[be:Катэгорыя:Геаграфія]]
 [[be-x-old:Катэгорыя:Геаграфія]]
@@ -41,6 +41,7 @@
 [[fy:Kategory:Geografy]]
 [[ga:Catagóir:Tíreolaíocht]]
 [[gl:Categoría:Xeografía]]
+[[gn:Ñemohenda:Tetãnguéra]]
 [[gu:Category:ભૂગોળ]]
 [[hak:Category:Thi-lî]]
 [[he:קטגוריה:גאוגרפיה]]
@@ -62,6 +63,7 @@
 [[ka:კატეგორია:გეოგრაფია]]
 [[kab:Taggayt:Tarakalt]]
 [[ko:분류:지리]]
+[[ksh:Saachjrupp:Äädtkondt]]
 [[ku:Kategorî:Erdnîgarî]]
 [[kv:Категория:География]]
 [[kw:Category:Dorydhyeth]]
