--- a/Template:Dalalka.mw
+++ b/Template:Dalalka.mw
@@ -50,7 +50,16 @@
    </tr>
 }}
 
+}}
 
+
+<!-------------------------------------Qaarada------------------------------------>
+{{#if:{{{qaarada|}}}
+|<!--then:-->
+   <tr> <th colspan="2">'''Qaarada'''</th>
+        <td>{{{qaarada}}}</td>
+   </tr>
+}}
 <!---------------------------------------Motto----------------------------------------->
 {{#if:{{{national_motto|}}}
 |<!--then:-->
