--- a/Template:Dalalka.mw
+++ b/Template:Dalalka.mw
@@ -37,12 +37,12 @@
             |<!--then:-->{{{text_flag}}}<!--used for N. Ireland-->
             |<!--else:-->{{border|[[Image:{{{sawir_calan}}}|125px|Calanka {{{common_name|{{PAGENAME}}}}}]]<!--end border:-->}} }}</td>
                  {{#if:{{{sawir_qaran|}}}
-                 |<!--then:--><td style="vertical-align:middle;"> [[Image:{{{sawir_qaran}}}|85px|{{{symbol_type|Astaannta Qaranka}}}{{{common_name|{{PAGENAME}}}}}]]</td>}}
+                 |<!--then:--><td style="vertical-align:middle;"> [[Image:{{{sawir_qaran}}}|85px|{{{symbol_type|Astaannta Qaranka}}} {{{common_name|{{PAGENAME}}}}}]]</td>}}
             </tr>
             <!-------Links:------->
             <tr> <td><small>[[Calanka {{{common_name|{{PAGENAME}}}}}|{{{flag_caption|Calan}}}]]</small></td>
                  {{#if:{{{sawir_qaran|}}}
-                 |<!--then:--><td><small>[[{{{symbol_type_article|{{{symbol_type|Astaannta Qaranka}}}}}}{{{common_name|{{PAGENAME}}}}}|{{{symbol_type|Astaannta Qaranka}}}]]</small></td>}}
+                 |<!--then:--><td><small>[[{{{symbol_type_article|{{{symbol_type|Astaannta Qaranka}}}}}} {{{common_name|{{PAGENAME}}}}}|{{{symbol_type|Astaannta Qaranka}}}]]</small></td>}}
             </tr>
          <!-----------End subtable:------------>
          </table>
@@ -607,11 +607,11 @@
 }}
 
 
-<!-------------------------------------Calling code------------------------------------->
-{{#if:{{{furaha_telefone|}}}
+<!-------------------------------------Furaha debeda------------------------------------->
+{{#if:{{{furaha_debeda|}}}
 |<!--then:-->
-   <tr> <th colspan="2">Furaha Telefone</th>
-        <td>+{{{furaha_telefone}}}</td>
+   <tr> <th colspan="2">Furaha debeda</th>
+        <td>+{{{furaha_debeda}}}</td>
    </tr>
 }}
 
