--- a/Template:Dalalka.mw
+++ b/Template:Dalalka.mw
@@ -574,7 +574,7 @@
 |<!--then:-->
    <tr {{#if:{{{utc_offset_DST|}}}{{{DST_note|}}} |<!--then:-->class="mergedtoprow"}}>
       <th colspan="2">'''Wakhti'''</th>
-      <td>{{{time_zone}}}&nbsp;{{#if:{{{utc_offset|}}}
+      <td>{{{wakhti}}}&nbsp;{{#if:{{{utc_offset|}}}
                                |<!--then:-->([[Coordinated Universal Time|UTC]]{{{utc_offset}}}) }}</td>
    </tr>
 
