--- a/Template:Dalalka.mw
+++ b/Template:Dalalka.mw
@@ -50,9 +50,6 @@
    </tr>
 }}
 
-}}
-
-
 <!-------------------------------------Qaarada------------------------------------>
 {{#if:{{{qaarada|}}}
 |<!--then:-->
@@ -610,7 +607,7 @@
 <!-------------------------------------Furaha debeda------------------------------------->
 {{#if:{{{furaha_debeda|}}}
 |<!--then:-->
-   <tr> <th colspan="2">Furaha debeda</th>
+   <tr> <th colspan="2">'''Furaha debeda'''</th>
         <td>+{{{furaha_debeda}}}</td>
    </tr>
 }}
