Waxaaan saxay taariiq qaldaneed

--- a/Cabdirashiid_Sharmaarke.mw
+++ b/Cabdirashiid_Sharmaarke.mw
@@ -58,7 +58,7 @@ Wuxuu ka mid noqday ururkii [[Somali Youth League]](SYL) waxyar ka dib markii la
 
 Wuxuu waxbarashadiisii dugsiga sare dhameystay [[1953]]dii, isagoo weli ka shaqeynaya Civil service, wuxuuna helay Course Schoolership ah dalka [[Talyaani]]ga gaar ahaan Jaamacadda [[University of Rome]] “La Sapienza”, halkaas oo uu ka qalin jibiyay sanadku markuu ahaa [[1958]]dii, wuxuuna sanad ka dib ku soo laabtay dalka [[Soomaaliya]], ka dibna waxaa loo doortay in uu noqdo xubinka tirsan Golihii lagu magacaabi jirey [[Somali Legislative Assembly]]. 
 
-Markii ay Soomaaliya noqotay dal madaxbannaan bishii 1, [[Luuliyo]] [[19960]]kii, wuxuu noqday Ra’iisul wasaarihii ugu horreeyay ee ay yeelato dalka Jamhuuriyadda Soomaaliya. 
+Markii ay Soomaaliya noqotay dal madaxbannaan bishii 1, [[Luuliyo]] [[1960]]kii, wuxuu noqday Ra’iisul wasaarihii ugu horreeyay ee ay yeelato dalka Jamhuuriyadda Soomaaliya. 
 
 Wuxuu markiiba bilaabay in uu dadaal u galo sidii uu guulo uga soo hoyn lahaa dhinaca arrimaha dibedda, wuxuuna dalka Ra’iisul wsaare ka ahaa illaa [[1964]]tii. 
 
@@ -67,7 +67,7 @@ Ka dib doorashooyin dalka ka dhacay wuxuu mar kale noqday xubin ka tirsan baarla
 Labo sano ka dib markii uu dalka Madaxweyne ka noqday ayaa askari ka tirsan ciidamadii ilaalada ka hayay uu toogasho ku dilay 15kii bishii [[Oktoobar]] [[1969]]kii, isagoo booqanaya gobolka [[Sanaag]] ee dalka [[Soomaaliya]] halkaas oo ay abaaro ka dhaceen. 
 
 Lix maalmood ka dib markii dilku dhacay ayay ciidamadii dalka talada xoog kula wareegeen iyadii weli lagu jiro baroordiiqda madaxweynahaasi la dilay. Waxaana 21kii [[Oktoobar]] [[1969]]kii dalka Madaxweyne ka noqday Allaha u naxariistee Sarreeye gaas [[Maxamed Siyaad Barre|Max’ed Siyaad Barre]] oo ahaa Taliyihii Ciidanka Xoogga dalka [[Soomaaliya|Soomaaliyeed]]. 
-[[Image:Sharmarke_iyo_JFK_1960.jpg|left|thumbnail|465px|Cabdirashiid Cali Sharmaarke - Madaxwaynaha Soomaaliya & [[John F. Kennedey]] - Madaxwaynaha [[Maraykanka]]. [[1960]]kii]].
+[[Image:Sharmarke_iyo_JFK_1960.jpg|left|thumbnail|465px|Cabdirashiid Cali Sharmaarke - Madaxwaynaha Soomaaliya & [[John F. Kennedey]] - Madaxwaynaha [[Maraykanka]]. [[1960]]kii.]]
 
 
 [[Category:Siyaasada Soomaaliya]]
